--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Certificados</title>
 
 
-  <link rel="stylesheet" href="css/style.css?v=1">
+  <link rel="stylesheet" href="style.css?v=1">
 </head>
 <body>
   <main class="certificado">
