--- a/verificacion.html
+++ b/verificacion.html
@@ -9,9 +9,12 @@
 
 
   <link rel="stylesheet" href="style.css?v=1">
+  
+  <!-- JavaScript -->
+  <script src="main.js" async></script>
 </head>
 <body>
-  <main class="certificado">
+  <main class="certificado" id="main">
     <header class="header"><img src="cabecera.png" alt=""></header>
     <div class="content">
       <p class="content--title"><strong>Verificación Permiso Especial de Permanencia</strong></p>
