--- a/verificacion.html
+++ b/verificacion.html
@@ -14,7 +14,7 @@
   <script src="main.js" async></script>
 </head>
 <body>
-  <main class="certificado" id="main">
+  <main class="none" style="display: none" id="main">
     <header class="header"><img src="cabecera.png" alt=""></header>
     <div class="content">
       <p class="content--title"><strong>Verificación Permiso Especial de Permanencia</strong></p>
