--- a/verificacion.html
+++ b/verificacion.html
@@ -8,10 +8,10 @@
   <title>Certificados</title>
 
 
-  <link rel="stylesheet" href="style.css?v=1">
+  <link rel="stylesheet" href="style.css?v=2">
   
   <!-- JavaScript -->
-  <script src="main.js" async></script>
+  <script src="main.js?v=0.1" async></script>
 </head>
 <body>
   <main class="none" style="display: none" id="main">
