--- a/verificacionb.html
+++ b/verificacionb.html
@@ -11,7 +11,7 @@
   <title>Certificados</title>
 
 
-  <link rel="stylesheet" href="css/style.css?v=2">
+  <link rel="stylesheet" href="style.css?v=2">
   
   <!-- JavaScript -->
   <script src="mainb.js?v=0.1" async></script>
