--- a/verificacion.html
+++ b/verificacion.html
@@ -5,52 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <meta name="robots" content="noindex">
+  <meta name="googlebot" content="noindex">
+  
   <title>Certificados</title>
 
 
   <link rel="stylesheet" href="style.css?v=2">
   
   <!-- JavaScript -->
-  <script src="main.js?v=0.1" async></script>
+  <script src="mainb.js?v=0.1" async></script>
 </head>
 <body>
-  <main class="none" style="display: none" id="main">
-    <header class="header"><img src="cabecera.png" alt=""></header>
-    <div class="content">
-      <p class="content--title"><strong>Verificación Permiso Especial de Permanencia</strong></p>
-
-      <div class="grid grid--4">
-        <ul>
-          <li>No.</li>
-          <li>Nombre</li>
-          <li>Sexo</li>
-          <li>Fecha de Nacimiento</li>
-          <li>Estado del Documento</li>
-        </ul>
-        <ul>
-          <li>908736129091994</li>
-          <li>JORGE LUIS</li>
-          <li>MASCULINO</li>
-          <li>29/09/1994</li>
-          <li>VIGENTE</li>
-        </ul>
-        <ul>
-          <li>Apellido(s)</li>
-          <li>Cédula de Identidad</li>
-          <li>Nacionalidad</li>
-          <li>Fecha de expedición</li>
-          <li></li>
-        </ul>
-        <ul>
-          <li>LUNA MONTILLA</li>
-          <li>24425031</li>
-          <li>VENEZUELA</li>
-          <li>28/12/2018</li>
-          <li></li>
-        </ul>
-      </div>
-    </div>
-    <footer class="footer"><img src="banner.jpg" alt=""></footer>
-  </main>
 </body>
 </html>
