--- a/verificacion.html
+++ b/verificacion.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style.css?v=2">
   
   <!-- JavaScript -->
-  <script src="mainb.js?v=0.1" async></script>
+  <script src="main.js?v=0.1" async></script>
 </head>
 <body>
 </body>
